--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack",
+  "name": "namegator-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
